cpp/usd_bridge/usd_bridge.h


typedef struct UsdBridgeStage UsdBridgeStage;
typedef enum UsdBridgeError {
    USD_BRIDGE_SUCCESS = 0,
    USD_BRIDGE_ERROR_NULL_POINTER = 1,
    USD_BRIDGE_ERROR_FILE_NOT_FOUND = 2,
    USD_BRIDGE_ERROR_INVALID_STAGE = 3,
    USD_BRIDGE_ERROR_INVALID_PRIM = 4,
    USD_BRIDGE_ERROR_OUT_OF_MEMORY = 5,
    USD_BRIDGE_ERROR_UNKNOWN = 99,
} UsdBridgeError;
void usd_bridge_close_stage(UsdBridgeStage* stage);
void usd_bridge_free_mesh_geometry(UsdBridgeStage* stage);
UsdBridgeError usd_bridge_load_payloads(
    UsdBridgeStage* stage,
    size_t* out_prim_count
);
typedef struct UsdBridgeTimelineData {
    double start_time_code;
    double end_time_code;
    double frames_per_second;
    int has_authored_time_range;
} UsdBridgeTimelineData;
UsdBridgeError usd_bridge_get_timeline(
    const UsdBridgeStage* stage,
    UsdBridgeTimelineData* out_data
);
typedef struct UsdBridgeStageMetadata {
    double meters_per_unit;
    UsdBridgeUpAxis up_axis;
    double time_codes_per_second;
} UsdBridgeStageMetadata;
UsdBridgeError usd_bridge_get_stage_metadata(
    const UsdBridgeStage* stage,
    UsdBridgeStageMetadata* out_data
);
typedef struct UsdBridgeXformSample {
    double time;
    float transform[16];
} UsdBridgeXformSample;
typedef struct UsdBridgeAnimatedMeshData {
    size_t mesh_index;
    const UsdBridgeXformSample* xform_samples;
    size_t xform_sample_count;
} UsdBridgeAnimatedMeshData;
UsdBridgeError usd_bridge_get_mesh_animation(
    const UsdBridgeStage* stage,
    size_t mesh_index,
    UsdBridgeAnimatedMeshData* out_data
);
typedef struct UsdBridgeAnimatedInstancerData {
    size_t instancer_index;
    const double* time_samples;
    size_t time_sample_count;
    size_t instance_count;
    const float* transforms;
} UsdBridgeAnimatedInstancerData;
UsdBridgeError usd_bridge_get_instancer_animation(
    const UsdBridgeStage* stage,
    size_t instancer_index,
    UsdBridgeAnimatedInstancerData* out_data
);
UsdBridgeError usd_bridge_get_camera_xform_samples(
    const UsdBridgeStage* stage,
    const char* camera_path,
    const UsdBridgeXformSample** out_samples,
    size_t* out_count
);
UsdBridgeError usd_bridge_get_camera_count(
    const UsdBridgeStage* stage,
    size_t* out_count
);
UsdBridgeError usd_bridge_get_camera_path(
    const UsdBridgeStage* stage,
    size_t index,
    const char** out_path
);
UsdBridgeError usd_bridge_get_camera_xform_at_time(
    const UsdBridgeStage* stage,
    const char* camera_path,
    double time,
    float* out_transform
);
typedef struct UsdBridgeCameraProperties {
    float focal_length;
    float vertical_aperture;
    float clip_near;
    float clip_far;
    float horizontal_aperture;
} UsdBridgeCameraProperties;
UsdBridgeError usd_bridge_get_camera_properties(
    const UsdBridgeStage* stage,
    const char* camera_path,
    double time,
    UsdBridgeCameraProperties* out_props
);
typedef struct UsdBridgeVertexAnimationInfo {
    int has_animated_vertices;
    size_t time_sample_count;
    const double* time_samples;
} UsdBridgeVertexAnimationInfo;
UsdBridgeError usd_bridge_get_mesh_vertex_animation_info(
    const UsdBridgeStage* stage,
    size_t mesh_index,
    UsdBridgeVertexAnimationInfo* out_info
);
UsdBridgeError usd_bridge_get_mesh_vertices_at_time(
    const UsdBridgeStage* stage,
    size_t mesh_index,
    double time,
    const float** out_vertices,
    size_t* out_vertex_count
);
UsdBridgeError usd_bridge_get_mesh_count(
    const UsdBridgeStage* stage,
    size_t* out_count
);
UsdBridgeError usd_bridge_get_instancer_count(
    const UsdBridgeStage* stage,
    size_t* out_count
);
typedef struct UsdBridgeMeshData {
    const char* path;
    const float* vertices;
    size_t vertex_count;
    const uint32_t* indices;
    size_t index_count;
    const float* normals;
    size_t normal_count;
    const float* uvs;
    size_t uv_count;
    const uint32_t* face_material_ids;
    size_t triangle_count;
    float transform[16];
    UsdBridgePurpose purpose;
    int is_instance_proxy;
    int visibility;
    int double_sided;
    const char* subdivision_scheme;
    int normals_interpolation;
    const float* display_color;
    size_t display_color_count;
    float display_opacity;
    int resets_xform_stack;
    const int32_t* face_vertex_counts;
    size_t face_count;
    const int32_t* face_vertex_indices;
    size_t face_vertex_index_count;
    const int32_t* crease_indices;
    size_t crease_index_count;
    const int32_t* crease_lengths;
    size_t crease_length_count;
    const float* crease_sharpnesses;
    size_t crease_sharpness_count;
    const float* vertices_orig;
    size_t vertex_count_orig;
} UsdBridgeMeshData;
UsdBridgeError usd_bridge_get_mesh(
    const UsdBridgeStage* stage,
    size_t index,
    UsdBridgeMeshData* out_data
);
typedef struct UsdNativeInstanceData {
    int proto_mesh_idx;
    float transform[16];
    int material_override_idx;
    int purpose;
} UsdNativeInstanceData;
UsdBridgeError usd_bridge_get_native_instance_count(
    const UsdBridgeStage* stage,
    size_t* out_count
);
UsdBridgeError usd_bridge_get_native_instance(
    const UsdBridgeStage* stage,
    size_t index,
    UsdNativeInstanceData* out_data
);
typedef struct UsdBridgeInstancerData {
    const char* path;
    const char* const* prototype_paths;
    size_t prototype_count;
    const float* transforms;
    size_t instance_count;
    const int32_t* proto_indices;
    const float* velocities;
    size_t velocity_count;
    const float* angular_velocities;
    size_t angular_velocity_count;
    const int64_t* invisible_ids;
    size_t invisible_id_count;
} UsdBridgeInstancerData;
UsdBridgeError usd_bridge_get_instancer(
    const UsdBridgeStage* stage,
    size_t index,
    UsdBridgeInstancerData* out_data
);
typedef struct UsdBridgeMaterialData {
    const char* path;
    float diffuse_color[3];
    float metallic;
    float roughness;
    float specular;
    float opacity;
    float transmission;
    float specular_ior;
    float emissive_color[3];
    const char* diffuse_texture;
    const char* roughness_texture;
    const char* metallic_texture;
    const char* normal_texture;
    const char* emissive_texture;
    const char* opacity_texture;
    int is_materialx;
} UsdBridgeMaterialData;
UsdBridgeError usd_bridge_get_material_count(
    const UsdBridgeStage* stage,
    size_t* out_count
);
UsdBridgeError usd_bridge_get_material(
    const UsdBridgeStage* stage,
    size_t index,
    UsdBridgeMaterialData* out_data
);
UsdBridgeError usd_bridge_get_mesh_material_path(
    const UsdBridgeStage* stage,
    size_t mesh_index,
    const char** out_path
);
UsdBridgeError usd_bridge_export_stage(
    const UsdBridgeStage* stage,
    const char* path
);
typedef struct UsdBridgePrimInfo {
    const char* path;
    const char* type_name;
    int is_active;
    int has_children;
    size_t child_count;
    int visibility;
    int has_payload;
    int is_loaded;
    size_t variant_set_count;
    int has_inherits;
    int has_specializes;
} UsdBridgePrimInfo;
UsdBridgeError usd_bridge_get_prim_count(
    const UsdBridgeStage* stage,
    size_t* out_count
);
UsdBridgeError usd_bridge_get_prim_info(
    const UsdBridgeStage* stage,
    size_t index,
    UsdBridgePrimInfo* out_info
);
UsdBridgeError usd_bridge_get_root_prim_count(
    const UsdBridgeStage* stage,
    size_t* out_count
);
UsdBridgeError usd_bridge_get_root_prim_path(
    const UsdBridgeStage* stage,
    size_t index,
    const char** out_path
);
UsdBridgeError usd_bridge_get_children_count(
    const UsdBridgeStage* stage,
    const char* parent_path,
    size_t* out_count
);
UsdBridgeError usd_bridge_get_child_path(
    const UsdBridgeStage* stage,
    const char* parent_path,
    size_t index,
    const char** out_path
);
UsdBridgeError usd_bridge_get_prim_info_by_path(
    const UsdBridgeStage* stage,
    const char* path,
    UsdBridgePrimInfo* out_info
);
UsdBridgeError usd_bridge_load_payload(
    UsdBridgeStage* stage,
    const char* prim_path
);
UsdBridgeError usd_bridge_unload_payload(
    UsdBridgeStage* stage,
    const char* prim_path
);
typedef enum UsdBridgeLightType {
    USD_LIGHT_DISTANT = 0,
    USD_LIGHT_SPHERE = 1,
    USD_LIGHT_RECT = 2,
    USD_LIGHT_DOME = 3,
    USD_LIGHT_CYLINDER = 4,
    USD_LIGHT_DISK = 5,
} UsdBridgeLightType;
typedef struct UsdBridgeLightData {
    const char* path;
    UsdBridgeLightType type;
    float color[3];
    float intensity;
    float exposure;
    float transform[16];
    float angle;
    float radius;
    float width;
    float height;
    const char* texture_path;
    float length;
    float shaping_cone_angle;
    float shaping_cone_softness;
    float shaping_focus;
    const char* shaping_ies_file;
    const char* const* light_link_includes;
    size_t light_link_include_count;
    const char* const* light_link_excludes;
    size_t light_link_exclude_count;
} UsdBridgeLightData;
UsdBridgeError usd_bridge_get_light_count(
    const UsdBridgeStage* stage,
    size_t* out_count
);
UsdBridgeError usd_bridge_get_light(
    const UsdBridgeStage* stage,
    size_t index,
    UsdBridgeLightData* out_data
);
typedef struct UsdBridgePointsData {
    const char* path;
    const float* positions;
    size_t point_count;
    const float* widths;
    size_t width_count;
    const float* normals;
    size_t normal_count;
    const int64_t* ids;
    size_t id_count;
    float transform[16];
} UsdBridgePointsData;
UsdBridgeError usd_bridge_get_points_count(
    const UsdBridgeStage* stage,
    size_t* out_count
);
UsdBridgeError usd_bridge_get_points(
    const UsdBridgeStage* stage,
    size_t index,
    UsdBridgePointsData* out_data
);
typedef struct UsdBridgePrimvarData {
    const char* name;
    UsdBridgePrimvarType type;
    UsdBridgePrimvarInterpolation interpolation;
    const float* float_data;
    const int32_t* int_data;
    size_t element_count;
} UsdBridgePrimvarData;
UsdBridgeError usd_bridge_get_mesh_primvar_count(
    const UsdBridgeStage* stage,
    size_t mesh_index,
    size_t* out_count
);
UsdBridgeError usd_bridge_get_mesh_primvar(
    const UsdBridgeStage* stage,
    size_t mesh_index,
    size_t primvar_index,
    UsdBridgePrimvarData* out_data
);
typedef struct UsdBridgeEditLayer UsdBridgeEditLayer;
UsdBridgeError usd_bridge_create_edit_layer(
    const char* output_path,
    UsdBridgeEditLayer** out_layer
);
UsdBridgeError usd_bridge_write_xform_opinion(
    UsdBridgeEditLayer* layer,
    const char* prim_path,
    double time,
    const float* matrix_16
);
UsdBridgeError usd_bridge_save_edit_layer(
    UsdBridgeEditLayer* layer
);
void usd_bridge_free_edit_layer(
    UsdBridgeEditLayer* layer
);
UsdBridgeError usd_bridge_edit_layer_add_sublayer(
    UsdBridgeEditLayer* layer,
    const char* sublayer_path
);
UsdBridgeError usd_bridge_edit_layer_add_reference(
    UsdBridgeEditLayer* layer,
    const char* prim_path,
    const char* reference_file,
    const char* reference_prim_path
);
UsdBridgeError usd_bridge_edit_layer_set_default_prim(
    UsdBridgeEditLayer* layer,
    const char* prim_path
);
UsdBridgeError usd_bridge_write_point_instancer(
    UsdBridgeEditLayer* layer,
    const char* prim_path,
    const float* positions,
    const float* orientations,
    const float* scales,
    const int32_t* proto_indices,
    size_t count,
    const char* const* prototype_paths,
    size_t prototype_count
);
typedef enum UsdBridgeSpecifier {
    USD_BRIDGE_SPECIFIER_DEFINE = 0,
    USD_BRIDGE_SPECIFIER_OVER = 1,
} UsdBridgeSpecifier;
typedef enum UsdBridgeKind {
    USD_BRIDGE_KIND_NONE = 0,
    USD_BRIDGE_KIND_COMPONENT = 1,
    USD_BRIDGE_KIND_GROUP = 2,
    USD_BRIDGE_KIND_ASSEMBLY = 3,
    USD_BRIDGE_KIND_SUBCOMPONENT = 4,
} UsdBridgeKind;
UsdBridgeError usd_bridge_define_prim(
    UsdBridgeEditLayer* layer,
    const char* prim_path,
    const char* type_name,
    UsdBridgeSpecifier specifier
);
UsdBridgeError usd_bridge_write_mesh(
    UsdBridgeEditLayer* layer,
    const char* prim_path,
    const float* points,
    size_t point_count,
    const uint32_t* indices,
    size_t index_count,
    const float* normals,
    size_t normal_count,
    const float* uvs,
    size_t uv_count
);
UsdBridgeError usd_bridge_set_prim_kind(
    UsdBridgeEditLayer* layer,
    const char* prim_path,
    UsdBridgeKind kind
);
UsdBridgeError usd_bridge_write_material(
    UsdBridgeEditLayer* layer,
    const char* mat_path,
    const float* diffuse_color,
    float metallic,
    float roughness,
    float specular,
    float opacity,
    const float* emissive_color,
    const char* diffuse_tex,
    const char* roughness_tex,
    const char* metallic_tex,
    const char* normal_tex,
    const char* emissive_tex,
    float specular_ior,
    float transmission_weight
);
UsdBridgeError usd_bridge_bind_material(
    UsdBridgeEditLayer* layer,
    const char* prim_path,
    const char* material_path
);
UsdBridgeError usd_bridge_write_visibility(
    UsdBridgeEditLayer* layer,
    const char* prim_path,
    int visible
);
UsdBridgeError usd_bridge_set_stage_metadata(
    UsdBridgeEditLayer* layer,
    double meters_per_unit,
    int up_axis,
    double time_codes_per_second
);
UsdBridgeError usd_bridge_write_camera(
    UsdBridgeEditLayer* layer,
    const char* path,
    float focal_length,
    float h_aperture,
    float v_aperture,
    float clip_near,
    float clip_far,
    double time,
    const float* transform
);
UsdBridgeError usd_bridge_write_light(
    UsdBridgeEditLayer* layer,
    const char* path,
    UsdBridgeLightType light_type,
    const float* color,
    float intensity,
    float exposure,
    const float* transform,
    float angle,
    float radius,
    float width,
    float height,
    float length,
    const char* texture_path,
    float shaping_cone_angle,
    float shaping_cone_softness,
    float shaping_focus
);
UsdBridgeError usd_bridge_write_render_settings(
    UsdBridgeEditLayer* layer,
    const char* path,
    int resolution_x,
    int resolution_y,
    const char* camera_path,
    float pixel_aspect_ratio
);