crates/bif_core/src/usd/ffi_raw.rs


    pub(crate) fn usd_bridge_close_stage(stage: *mut UsdBridgeStageRaw);
    pub(crate) fn usd_bridge_free_mesh_geometry(stage: *mut UsdBridgeStageRaw);
    pub(crate) fn usd_bridge_load_payloads(
        stage: *mut UsdBridgeStageRaw,
        out_prim_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_mesh_count(
        stage: *const UsdBridgeStageRaw,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_instancer_count(
        stage: *const UsdBridgeStageRaw,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_mesh(
        stage: *const UsdBridgeStageRaw,
        index: usize,
        out_data: *mut UsdBridgeMeshDataRaw,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_instancer(
        stage: *const UsdBridgeStageRaw,
        index: usize,
        out_data: *mut UsdBridgeInstancerDataRaw,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_native_instance_count(
        stage: *const UsdBridgeStageRaw,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_native_instance(
        stage: *const UsdBridgeStageRaw,
        index: usize,
        out_data: *mut UsdNativeInstanceDataRaw,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_export_stage(
        stage: *const UsdBridgeStageRaw,
        path: *const c_char,
    ) -> UsdBridgeErrorCode;

    // Prim traversal APIs (for scene browser)
    pub(crate) fn usd_bridge_get_prim_count(
        stage: *const UsdBridgeStageRaw,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_prim_info(
        stage: *const UsdBridgeStageRaw,
        index: usize,
        out_info: *mut UsdBridgePrimInfoRaw,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_root_prim_count(
        stage: *const UsdBridgeStageRaw,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_root_prim_path(
        stage: *const UsdBridgeStageRaw,
        index: usize,
        out_path: *mut *const c_char,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_children_count(
        stage: *const UsdBridgeStageRaw,
        parent_path: *const c_char,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_child_path(
        stage: *const UsdBridgeStageRaw,
        parent_path: *const c_char,
        index: usize,
        out_path: *mut *const c_char,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_prim_info_by_path(
        stage: *const UsdBridgeStageRaw,
        path: *const c_char,
        out_info: *mut UsdBridgePrimInfoRaw,
    ) -> UsdBridgeErrorCode;

    // Material APIs
    pub(crate) fn usd_bridge_get_material_count(
        stage: *const UsdBridgeStageRaw,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_material(
        stage: *const UsdBridgeStageRaw,
        index: usize,
        out_data: *mut UsdBridgeMaterialDataRaw,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_mesh_material_path(
        stage: *const UsdBridgeStageRaw,
        mesh_index: usize,
        out_path: *mut *const c_char,
    ) -> UsdBridgeErrorCode;

    // Timeline APIs
    pub(crate) fn usd_bridge_get_timeline(
        stage: *const UsdBridgeStageRaw,
        out_data: *mut UsdBridgeTimelineDataRaw,
    ) -> UsdBridgeErrorCode;

    // Stage metadata APIs
    pub(crate) fn usd_bridge_get_stage_metadata(
        stage: *const UsdBridgeStageRaw,
        out_data: *mut UsdBridgeStageMetadataRaw,
    ) -> UsdBridgeErrorCode;

    // Animation APIs
    pub(crate) fn usd_bridge_get_mesh_animation(
        stage: *const UsdBridgeStageRaw,
        mesh_index: usize,
        out_data: *mut UsdBridgeAnimatedMeshDataRaw,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_instancer_animation(
        stage: *const UsdBridgeStageRaw,
        instancer_index: usize,
        out_data: *mut UsdBridgeAnimatedInstancerDataRaw,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_camera_xform_samples(
        stage: *const UsdBridgeStageRaw,
        camera_path: *const c_char,
        out_samples: *mut *const UsdBridgeXformSampleRaw,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_camera_count(
        stage: *const UsdBridgeStageRaw,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_camera_path(
        stage: *const UsdBridgeStageRaw,
        index: usize,
        out_path: *mut *const c_char,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_camera_xform_at_time(
        stage: *const UsdBridgeStageRaw,
        camera_path: *const c_char,
        time: f64,
        out_transform: *mut f32,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_camera_properties(
        stage: *const UsdBridgeStageRaw,
        camera_path: *const c_char,
        time: f64,
        out_props: *mut UsdBridgeCameraPropertiesRaw,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_mesh_vertex_animation_info(
        stage: *const UsdBridgeStageRaw,
        mesh_index: usize,
        out_info: *mut UsdBridgeVertexAnimationInfoRaw,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_mesh_vertices_at_time(
        stage: *const UsdBridgeStageRaw,
        mesh_index: usize,
        time: f64,
        out_vertices: *mut *const f32,
        out_vertex_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    // Light APIs
    pub(crate) fn usd_bridge_get_light_count(
        stage: *const UsdBridgeStageRaw,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_light(
        stage: *const UsdBridgeStageRaw,
        index: usize,
        out_data: *mut UsdBridgeLightDataRaw,
    ) -> UsdBridgeErrorCode;

    // Points APIs (UsdGeomPoints)
    pub(crate) fn usd_bridge_get_points_count(
        stage: *const UsdBridgeStageRaw,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_points(
        stage: *const UsdBridgeStageRaw,
        index: usize,
        out_data: *mut UsdBridgePointsDataRaw,
    ) -> UsdBridgeErrorCode;

    // Primvar query APIs
    pub(crate) fn usd_bridge_get_mesh_primvar_count(
        stage: *const UsdBridgeStageRaw,
        mesh_index: usize,
        out_count: *mut usize,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_get_mesh_primvar(
        stage: *const UsdBridgeStageRaw,
        mesh_index: usize,
        primvar_index: usize,
        out_data: *mut UsdBridgePrimvarDataRaw,
    ) -> UsdBridgeErrorCode;

    // Edit layer export
    pub(crate) fn usd_bridge_create_edit_layer(
        output_path: *const c_char,
        out_layer: *mut *mut UsdBridgeEditLayerRaw,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_write_xform_opinion(
        layer: *mut UsdBridgeEditLayerRaw,
        prim_path: *const c_char,
        time: f64,
        matrix_16: *const f32,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_save_edit_layer(
        layer: *mut UsdBridgeEditLayerRaw,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_free_edit_layer(layer: *mut UsdBridgeEditLayerRaw);

    pub(crate) fn usd_bridge_edit_layer_add_sublayer(
        layer: *mut UsdBridgeEditLayerRaw,
        sublayer_path: *const c_char,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_edit_layer_add_reference(
        layer: *mut UsdBridgeEditLayerRaw,
        prim_path: *const c_char,
        reference_file: *const c_char,
        reference_prim_path: *const c_char,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_edit_layer_set_default_prim(
        layer: *mut UsdBridgeEditLayerRaw,
        prim_path: *const c_char,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_write_point_instancer(
        layer: *mut UsdBridgeEditLayerRaw,
        prim_path: *const c_char,
        positions: *const f32,
        orientations: *const f32,
        scales: *const f32,
        proto_indices: *const i32,
        count: usize,
        prototype_paths: *const *const c_char,
        prototype_count: usize,
    ) -> UsdBridgeErrorCode;

    // Mesh authoring
    pub(crate) fn usd_bridge_write_mesh(
        layer: *mut UsdBridgeEditLayerRaw,
        prim_path: *const c_char,
        points: *const f32,
        point_count: usize,
        indices: *const u32,
        index_count: usize,
        normals: *const f32,
        normal_count: usize,
        uvs: *const f32,
        uv_count: usize,
    ) -> UsdBridgeErrorCode;

    // Prim authoring
    pub(crate) fn usd_bridge_define_prim(
        layer: *mut UsdBridgeEditLayerRaw,
        prim_path: *const c_char,
        type_name: *const c_char,
        specifier: UsdBridgeSpecifierRaw,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_set_prim_kind(
        layer: *mut UsdBridgeEditLayerRaw,
        prim_path: *const c_char,
        kind: UsdBridgeKindRaw,
    ) -> UsdBridgeErrorCode;

    // Material export (UsdPreviewSurface + OpenPBR MaterialX dual output)
    pub(crate) fn usd_bridge_write_material(
        layer: *mut UsdBridgeEditLayerRaw,
        mat_path: *const c_char,
        diffuse_color: *const f32,
        metallic: f32,
        roughness: f32,
        specular: f32,
        opacity: f32,
        emissive_color: *const f32,
        diffuse_tex: *const c_char,
        roughness_tex: *const c_char,
        metallic_tex: *const c_char,
        normal_tex: *const c_char,
        emissive_tex: *const c_char,
        specular_ior: f32,
        transmission_weight: f32,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_bind_material(
        layer: *mut UsdBridgeEditLayerRaw,
        prim_path: *const c_char,
        material_path: *const c_char,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_write_visibility(
        layer: *mut UsdBridgeEditLayerRaw,
        prim_path: *const c_char,
        visible: i32,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_set_stage_metadata(
        layer: *mut UsdBridgeEditLayerRaw,
        meters_per_unit: f64,
        up_axis: i32,
        time_codes_per_second: f64,
    ) -> UsdBridgeErrorCode;

    // Camera export
    pub(crate) fn usd_bridge_write_camera(
        layer: *mut UsdBridgeEditLayerRaw,
        path: *const c_char,
        focal_length: f32,
        h_aperture: f32,
        v_aperture: f32,
        clip_near: f32,
        clip_far: f32,
        time: f64,
        transform: *const f32,
    ) -> UsdBridgeErrorCode;

    // Light export
    pub(crate) fn usd_bridge_write_light(
        layer: *mut UsdBridgeEditLayerRaw,
        path: *const c_char,
        light_type: UsdBridgeLightType,
        color: *const f32,
        intensity: f32,
        exposure: f32,
        transform: *const f32,
        angle: f32,
        radius: f32,
        width: f32,
        height: f32,
        length: f32,
        texture_path: *const c_char,
        shaping_cone_angle: f32,
        shaping_cone_softness: f32,
        shaping_focus: f32,
    ) -> UsdBridgeErrorCode;

    // Render settings export
    pub(crate) fn usd_bridge_write_render_settings(
        layer: *mut UsdBridgeEditLayerRaw,
        path: *const c_char,
        resolution_x: i32,
        resolution_y: i32,
        camera_path: *const c_char,
        pixel_aspect_ratio: f32,
    ) -> UsdBridgeErrorCode;

    // Payload
    pub(crate) fn usd_bridge_load_payload(
        stage: *mut UsdBridgeStageRaw,
        prim_path: *const c_char,
    ) -> UsdBridgeErrorCode;

    pub(crate) fn usd_bridge_unload_payload(
        stage: *mut UsdBridgeStageRaw,
        prim_path: *const c_char,
    ) -> UsdBridgeErrorCode;
